--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\cqfl1\\appdata\\Roaming\\Python\\Python27\\python.exe",
+    "python.pythonPath": "C:\\Users\\cqfl1\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
     "git.ignoreLimitWarning": true
 }
